--- a/dnn_pytorch/pyproject.toml
+++ b/dnn_pytorch/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
 'numpy == 2.2.3',
 'matplotlib == 3.10.1',
 'torch == 2.5.1',
-'torchvision == 0.20.1+cpu'
+'torchvision == 0.20.1'
 ]
 
 [[tool.uv.index]]
