--- a/dnn_pytorch/pyproject.toml
+++ b/dnn_pytorch/pyproject.toml
@@ -5,10 +5,14 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-'numpy == 2.2.3',
-'matplotlib == 3.10.1',
-'torch == 2.5.1',
-'torchvision == 0.20.1'
+    'numpy == 2.2.3',
+    'matplotlib == 3.10.1',
+    'torch == 2.5.1',
+    'torchvision == 0.20.1',
+    'scipy == 1.15.2',
+    "pandas>=2.2.3",
+    "requests>=2.32.3",
+    "scikit-learn>=1.6.1",
 ]
 
 [[tool.uv.index]]
